@@ -7,6 +7,9 @@
 - ``supervisorctl`` commands ``avail``, ``reread``, and ``version`` now show
   an error message if an argument is given.
 
+- Fixed a bug where ``supervisorctl fg`` would swallow most XML-RPC faults.
+  ``fg`` now prints the fault and exits.
+
 3.3.1 (2016-08-02)
 ------------------
 
